Post view and list view added

--- a/templates/public/default/home.html.twig
+++ b/templates/public/default/home.html.twig
@@ -1,7 +1,7 @@
 {% extends 'public/layout.html.twig' %}
 
 {% block stylesheets %}
-    <link rel="stylesheet" href="public/css/home.css">
+    <link rel="stylesheet" href="public/css/public/home.css">
 {% endblock %}
 
 {% block title %}
