--- a/templates/public/layout.html.twig
+++ b/templates/public/layout.html.twig
@@ -8,7 +8,7 @@
         <li><a href="mobile.html">Mobile</a></li>
     </ul>
 
-    <nav class="cyan darken-4">
+    <nav class="grey darken-3">
         <div class="container">
             <div class="nav-wrapper">
                 <a href="http://{{ constant("ROOT") }}/" class="brand-logo">&lt;?php Damien_V ?&gt;</a>
