Session fw class creation

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -5,7 +5,27 @@
     color: #ffffff;
 }
 
-/* move */
+/*######################################################################################################################
+######################################## FLASH MESSAGE #################################################################
+######################################################################################################################*/
+.flash-msg
+{
+    position: absolute;
+    text-align: center;
+    width: 100%;
+    padding-top: 15px;
+    padding-bottom: 15px;
+    color: #ffffff;
+}
+
+.flash-msg-success
+{
+    background: #4caf50;
+}
+
+/*######################################################################################################################
+######################################## ANIMATIONS ####################################################################
+######################################################################################################################*/
 .moveUp, .moveLeft, .moveRight
 {
     transition: transform .3s ease-out;
