--- a/templates/public/default/home.html.twig
+++ b/templates/public/default/home.html.twig
@@ -22,7 +22,7 @@
         </div>
     </div>
 
-    <form action="" method="post">
+    <form action="http://{{ constant("ROOT") }}/" method="post">
         <input type="submit" class="btn" value="Ok">
     </form>
 
