Signup working, password not encrypted yet

--- a/templates/layout.html.twig
+++ b/templates/layout.html.twig
@@ -33,9 +33,9 @@
             {% block nav %}{% endblock %}
         </header>
 
-        {% if app.session %}
-            <div class="flash-msg flash-msg-{{ flashMsg.type }} center-align">{{ flashMsg.message }}</div>
-        {% endif %}
+        {#{% if flashMsg %}#}
+            {#<div class="flash-msg flash-msg-{{ flashMsg.type }} center-align">{{ flashMsg.message }}</div>#}
+        {#{% endif %}#}
 
         {% block body %}{% endblock %}
 
