--- a/templates/public/default/home.html.twig
+++ b/templates/public/default/home.html.twig
@@ -10,7 +10,7 @@
 
 {% block body %}
     <div id="home-banner">
-        <div class="container">
+        {#<div class="container">#}
             <div class="row center-align">
                 <div class="col l8 offset-l2 white-text">
                     <a href="http://www.damienvauchel.com" target="_blank"><h1 class="white-text"><b>DAMIEN VAUCHEL</b></h1></a>
@@ -19,7 +19,7 @@
                     <a href="public/docs/online-2017-CV-Damien-Vauchel.pdf" class="btn white hoverable waves-effect black-text" target="_blank">Télécharger le CV</a>
                 </div>
             </div>
-        </div>
+        {#</div>#}
     </div>
 
     <form action="http://{{ constant("ROOT") }}/" method="post">
