--- a/templates/public/layout.html.twig
+++ b/templates/public/layout.html.twig
@@ -2,10 +2,10 @@
 
 {% block nav %}
     <ul class="sidenav" id="mobile-demo">
-        <li><a href="sass.html">Sass</a></li>
-        <li><a href="badges.html">Components</a></li>
-        <li><a href="collapsible.html">Javascript</a></li>
-        <li><a href="mobile.html">Mobile</a></li>
+        {#<li><a href="sass.html">Sass</a></li>#}
+        {#<li><a href="badges.html">Components</a></li>#}
+        {#<li><a href="collapsible.html">Javascript</a></li>#}
+        {#<li><a href="mobile.html">Mobile</a></li>#}
     </ul>
 
     <nav class="grey darken-3">
