--- a/templates/public/layout.html.twig
+++ b/templates/public/layout.html.twig
@@ -20,10 +20,10 @@
                         <li><a href="http://{{ constant("ROOT") }}/admin">Admin</a></li>
                     {% endif %}
                     {% if roles %}
-                        <li><a href="http://{{ constant("ROOT") }}/logout">Déconnexion</a></li>
+                        <li><a href="http://{{ constant("ROOT") }}/logout" class="red darken-4">Déconnexion</a></li>
                     {% else %}
-                        <li><a href="http://{{ constant("ROOT") }}/signup">S'inscrire</a></li>
-                        <li><a href="http://{{ constant("ROOT") }}/login">Connexion</a></li>
+                        <li><a href="http://{{ constant("ROOT") }}/signup" class="green darken-4">S'inscrire</a></li>
+                        <li><a href="http://{{ constant("ROOT") }}/login" class="indigo darken-4">Connexion</a></li>
                     {% endif %}
                 </ul>
             </div>
