--- a/templates/public/post/edit.html.twig
+++ b/templates/public/post/edit.html.twig
@@ -3,21 +3,21 @@
 {% block body %}
     <div class="container">
         <div class="form-container" id="signup-container">
-            <form class="col s12" method="post" action="http://{{ constant("ROOT") }}/create/post">
+            <form class="col s12" method="post" action="http://{{ constant("ROOT") }}/edit/post/{{ post.slug }}">
                 <div class="row">
                     <div class="input-field col s12">
-                        <input id="title" name="title" type="text" class="validate" required>
+                        <input id="title" name="title" type="text" class="validate" required value="{{ post.title }}">
                         <label for="title">Titre</label>
                     </div>
                     <div class="input-field col s12">
-                        <textarea id="content" name="content" class="materialize-textarea"></textarea>
+                        <textarea id="content" name="content" class="materialize-textarea">{{ post.content }}</textarea>
                         <label for="content">Contenu</label>
                     </div>
                 </div>
                 <div class="row">
                     <div class="col s12">
                         <div class="input-field inline">
-                            <input type="submit" class="btn indigo darken-4 hoverable" value="Ajouter l'article">
+                            <input type="submit" class="btn indigo darken-4 hoverable" value="Modifier l'article">
                         </div>
                     </div>
                 </div>
