--- a/templates/public/post/view.html.twig
+++ b/templates/public/post/view.html.twig
@@ -13,61 +13,23 @@
         <div class="container">
                 <a href="http://{{ constant("ROOT") }}/posts" class="btn right grey darken-3 hoverable">Retourner à la liste des articles</a>
                 <h1 class="center-align white-text"><b>{{ post.title }}</b></h1>
-                {#<div class="text-right">#}
-                    {#<div><b>#}
-                            {#<?php#}
-                        {#if($post->getUpdateDate() != $post->getCreationDate())#}
-                            {#{#}
-                            {#echo "Mis à jour";#}
-                            {#}#}
-                            {#else#}
-                            {#{#}
-                            {#echo "Ecrit";#}
-                            {#}#}
-                            {#?> par: <?= $post->getAuthor(); ?></b>#}
-                        {#<div style="text-decoration: underline; font-weight: bold;"><i class="fa fa-clock-o" aria-hidden="true"></i> Date de la dernière mise à jour: <?= $post->getUpdateDate(); ?></div>#}
-                    {#</div>#}
-                {#</div>#}
+                <div class="white-text">
+                    <b>
+                        Ecrit par: {{ post.author }}
+                    </b>
+                    <br>
+                    <small>
+                        <i class="material-icons" style="font-size: 1em">access_time</i> le {{ post.creation_date|date("d/m/Y à H\\hi\\m\\i\\n") }}
+                    </small>
+                </div>
         </div><!-- container -->
     </div><!--  bluewrap -->
 
     <div class="container">
         <div class="row">
-            <br>
-            {#<div class="text-left col-md-6" ><a href="index.php?update&id=<?= $post->getId(); ?>" class="btn btn-primary">Modifier l'article</a></div>#}
-            {#<br>#}
-            {#<br>#}
-            {#<div class="col s12">#}
-                {#<img class="center-block img-responsive" src="assets/post_photo/<?= $post->getPhoto(); ?>" alt="">#}
-            {#</div>#}
-            <br>
             <div class="col s12">
                 <p class="post-content">{{ post.content }}</p>
             </div>
-            <br>
-            {#<div class="text-right"><a class="btn btn-danger" data-toggle="modal" data-target="#suppressModal">Supprimer l'article</a></div>#}
-            {#<!-- Modal -->#}
-            {#<div class="modal fade" id="suppressModal" tabindex="-1" role="dialog" aria-labelledby="suppressModalLabel" aria-hidden="true">#}
-                {#<div class="modal-dialog" role="document">#}
-                    {#<div class="modal-content">#}
-                        {#<div class="modal-header">#}
-                            {#<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>#}
-                            {#<h5 class="modal-title" id="suppressModalLabel">Suppression de post</h5>#}
-                        {#</div>#}
-                        {#<div class="modal-body">#}
-                            {#<div>Etes-vous certain(e) de vouloir supprimer le post?</div>#}
-                        {#</div>#}
-                        {#<div class="modal-footer">#}
-                            {#<form action="index.php?post&id=<?= $post->getId(); ?>" method="post">#}
-                                {#<input type="submit" class="btn btn-danger" name="suppr" value="Oui">#}
-                                {#<button type="button" class="btn btn-secondary" data-dismiss="modal">Non</button>#}
-                            {#</form>#}
-                        {#</div>#}
-                    {#</div>#}
-                {#</div>#}
-            {#</div>#}
-            {#<!-- Fin du Modal -->#}
-            <br>
         </div><!-- row -->
     </div>
 {% endblock %}
