--- a/templates/admin/layout.html.twig
+++ b/templates/admin/layout.html.twig
@@ -11,11 +11,8 @@
     <nav class="grey darken-3">
         <div class="container">
             <div class="nav-wrapper">
-                <a href="http://{{ constant("ROOT") }}/" class="brand-logo">&lt;?php Damien_V ?&gt;</a>
+                <a href="http://{{ constant("ROOT") }}/admin" class="brand-logo">&lt;?php Damien_V ?&gt; ADMIN</a>
                 <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
-                <ul class="left">
-                    <li><a href="http://{{ constant("ROOT") }}/admin" class="bold-text"><b>ADMIN</b></a></li>
-                </ul>
                 <ul class="right hide-on-med-and-down">
                     <li><a href="http://{{ constant("ROOT") }}/" class="btn waves-effect grey darken-3 hoverable"><i class="material-icons left">chevron_left</i> Retour sur le site</a></li>
                     <li><a href="http://{{ constant("ROOT") }}/admin">Accueil</a></li>
