--- a/public/css/main.css
+++ b/public/css/main.css
@@ -5,6 +5,49 @@
     color: #ffffff;
 }
 
+a
+{
+    color: black;
+    text-decoration: none;
+}
+
+/*######################################################################################################################
+######################################## FOOTER ########################################################################
+######################################################################################################################*/
+footer
+{
+    background: #424242;
+    padding-top: 15px;
+    padding-bottom: 10px;
+}
+
+footer a
+{
+    color: #fff;
+    font-size: 1.5em;
+    padding: 0 20px;
+}
+
+.fa-linkedin-in:hover
+{
+    color: #007bb5 !important;
+}
+
+.fa-user:hover
+{
+    color: rebeccapurple !important;
+}
+
+.fa-twitter:hover
+{
+    color: #55acee !important;
+}
+
+.fa-github:hover
+{
+    color: #fff !important;
+}
+
 /*######################################################################################################################
 ######################################## FLASH MESSAGE #################################################################
 ######################################################################################################################*/
