--- a/templates/public/default/home.html.twig
+++ b/templates/public/default/home.html.twig
@@ -22,8 +22,8 @@
         {#</div>#}
     </div>
 
-    <div class="container" id="home-container">
-        <div class="row" id="home-row">
+    <div class="container home-band">
+        <div class="row">
             <h4 class="center-align">DERNIERS ARTICLES DU BLOG</h4>
             <br>
             {% for post in posts %}
@@ -52,7 +52,7 @@
         </div><!-- row -->
     </div><!-- container -->
 
-    <div class="grey lighten-3">
+    <div class="grey lighten-3 home-band">
         <div class="container">
             <div class="row center-align">
                 <br><br>
@@ -83,7 +83,7 @@
         </div>
     </div>
 
-    <div class="container">
+    <div class="container home-band">
         <div class="row center-align">
             <h4>DERNIERES REALISATIONS</h4>
             <br>
@@ -107,55 +107,47 @@
         </div><!-- row -->
     </div><!-- container -->
 
-    {#<!--                   CONTACT                                                                   -->#}
-    {#<div class="container tab-pane" id="contact">#}
-        {#<br>#}
-        {#<h2 class="text-center"><b>Pour me contacter</b></h2>#}
-        {#<br>#}
-        {#<form class="form" action="index.php?home" method="post" autocomplete="off">#}
-            {#<div class="form-group row">#}
-                {#<label for="nom" class="col-sm-2 col-form-label">Nom</label>#}
-                {#<div class="col-sm-10">#}
-                    {#<input type="text" class="form-control" name="nom" id="nom" placeholder="Tapez votre Nom" value="<?php if (!empty($_POST['nom'])) {echo $_POST['nom'];} ?>">#}
-                    {#<?php if(isset($tableError[0]["name"])) {echo "<span class='help-inline col-sm-12'>".$tableError[0]['name']."</span>";} ?>#}
-                {#</div>#}
-            {#</div>#}
-            {#<br>#}
-            {#<div class="form-group row">#}
-                {#<label for="prenom" class="col-sm-2 col-form-label">Prénom</label>#}
-                {#<div class="col-sm-10">#}
-                    {#<input type="text" class="form-control" name="prenom" id="prenom" placeholder="Tapez votre Prénom" value="<?php if (!empty($_POST['prenom'])) {echo $_POST['prenom'];} ?>">#}
-                    {#<?php if(isset($tableError[1]["firstname"])) {echo "<span class='help-inline col-sm-12'>".$tableError[1]["firstname"]."</span>";} ?>#}
-                {#</div>#}
-            {#</div>#}
-            {#<br>#}
-            {#<div class="form-group row">#}
-                {#<label for="email" class="col-sm-2 col-form-label">Email</label>#}
-                {#<div class="col-sm-10">#}
-                    {#<input type="email" class="form-control" name="email" id="email" placeholder="Tapez votre mail" value="<?php if (!empty($_POST['email'])) {echo $_POST['email'];} ?>">#}
-                    {#<?php if(isset($tableError[2]["email"])) {echo "<span class='help-inline col-sm-12'>".$tableError[2]["email"]."</span>";} ?>#}
-                {#</div>#}
-            {#</div>#}
-            {#<br>#}
-            {#<div class="form-group row">#}
-                {#<label for="subject" class="col-sm-2 col-form-label">Sujet</label>#}
-                {#<div class="col-sm-10">#}
-                    {#<input type="text" class="form-control" name="subject" id="subject" placeholder="Objet du message" value="<?php if (!empty($_POST['subject'])) {echo $_POST['subject'];} ?>">#}
-                    {#<?php if(isset($tableError[3]["subject"])) {echo "<span class='help-inline col-sm-12'>".$tableError[3]["subject"]."</span>";} ?>#}
-                {#</div>#}
-            {#</div>#}
-            {#<div class="form-group row">#}
-                {#<label for="message" class="col-sm-2 col-form-label">Votre message</label>#}
-                {#<div class="col-sm-10">#}
-                    {#<textarea name="message" class="form-control animated" placeholder="Tapez votre message ici" rows="10"><?php if (!empty($_POST['message'])) {echo $_POST['message'];} ?></textarea>#}
-                    {#<small><em>Le cadre peut être redimensionné</em></small>#}
-                    {#<?php if(isset($tableError[4]["message"])) {echo "<span class='help-inline col-sm-12'>".$tableError[4]["message"]."</span>";} ?>#}
-                {#</div>#}
-            {#</div>#}
-            {#<div class="form-group row">#}
-                {#<input type="submit" name="sendmsg" class="btn btn-default btn-lg pull-right" id="btn-sendmsg" value="Envoyer le message">#}
-            {#</div>#}
-        {#</form>#}
-    {#</div>#}
-    {#<!--                    FIN CONTACT                                                    -->#}
+    <div class="grey lighten-3 home-band">
+        <div class="container">
+            <div class="form-container">
+                <form class="col s12" method="post" action="http://{{ constant("ROOT") }}/">
+                    <div class="row">
+                        <div class="input-field col s6">
+                            <input id="lastname" name="lastname" type="text" class="validate" required>
+                            <label for="lastname">Nom</label>
+                        </div>
+                        <div class="input-field col s6">
+                            <input id="firstname" name="firstname" type="text" class="validate" required>
+                            <label for="firstname">Prénom</label>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="input-field col s12">
+                            <input id="email" name="email" type="email" class="validate" required>
+                            <label for="email">Email</label>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="input-field col s12">
+                            <input id="subject" name="subject" type="text" class="validate" required>
+                            <label for="subject">Sujet</label>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="input-field col s12">
+                            <textarea id="message" name="message" class="materialize-textarea"></textarea>
+                            <label for="message">Message</label>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col s12">
+                            <div class="input-field inline">
+                                <input type="submit" class="btn indigo darken-4 hoverable" value="Envoyer le message">
+                            </div>
+                        </div>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
 {% endblock %}
