--- a/public/css/public/post.css
+++ b/public/css/public/post.css
@@ -16,6 +16,11 @@
     margin-top: 20px;
 }
 
+.pagination .active
+{
+    background: #1a237e !important;
+}
+
 /*######################################################################################################################
 ######################################## FOOTER ########################################################################
 ######################################################################################################################*/
