--- a/templates/public/post/create.html.twig
+++ b/templates/public/post/create.html.twig
@@ -17,7 +17,7 @@
                 <div class="row">
                     <div class="col s12">
                         <div class="input-field inline">
-                            <input type="submit" class="btn indigo darken-4 hoverable" value="Ajouter l'article">
+                            <input type="submit" class="btn indigo darken-4 hoverable" value="Ajouter l'article" name="submitPostCreate">
                         </div>
                     </div>
                 </div>
