--- a/public/css/public/home.css
+++ b/public/css/public/home.css
@@ -1,6 +1,7 @@
 #home-banner
 {
-    background: url("../../img/header-bg.jpg") no-repeat center top;
+    background: url("../../img/header-bg.jpg") no-repeat center fixed;
+    background-size: cover;
     padding: 5% 0;
 }
 
