--- a/templates/public/post/create.html.twig
+++ b/templates/public/post/create.html.twig
@@ -14,6 +14,7 @@
                         <label for="content">Contenu</label>
                     </div>
                 </div>
+                <input type="hidden" name="token" id="token" value="{{ token }}">
                 <div class="row">
                     <div class="col s12">
                         <div class="input-field inline">
