--- a/templates/public/post/delete.html.twig
+++ b/templates/public/post/delete.html.twig
@@ -5,6 +5,7 @@
         <div class="form-container" id="signup-container">
             <form class="col s12" method="post" action="http://{{ constant("ROOT") }}/delete/post/{{ post.slug }}">
                 <h5>Etes-vous sûr de vouloir supprimer l'article {{ post.title }} ?</h5>
+                <input type="hidden" name="token" id="token" value="{{ token }}">
                 <div class="row">
                     <div class="col s6">
                         <div class="input-field inline">
