--- a/templates/public/post/edit.html.twig
+++ b/templates/public/post/edit.html.twig
@@ -13,6 +13,7 @@
                         <textarea id="content" name="content" class="materialize-textarea">{{ post.content }}</textarea>
                         <label for="content">Contenu</label>
                     </div>
+                    <input type="hidden" name="token" id="token" value="{{ token }}">
                 </div>
                 <div class="row">
                     <div class="col s12">
