--- a/templates/public/post/view.html.twig
+++ b/templates/public/post/view.html.twig
@@ -42,6 +42,7 @@
                                 <label for="comment">Votre commentaire</label>
                             </div>
                         </div>
+                        <input type="hidden" name="token" id="token" value="{{ token }}">
                         <div class="row">
                             <div class="col s12">
                                 <div class="input-field inline">
